deploy/kubernetes/resources/kong/simple-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: "/api/conto"
            backend:
              serviceName: simple
              servicePort: 9000
          - path: "/api/versa"
            backend:
              serviceName: simple
              servicePort: 9000
          - path: "/api/preleva"
            backend:
              serviceName: simple
              servicePort: 9000
          - path: "/api/versione"
            backend:
              serviceName: simple
              servicePort: 9000
